feat: 🎸 在app.module.ts里引入RouterModule,Routes构建路由的必要类和接口

--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,4 +1,5 @@
 <ul>
-  <li>todo</li>
-  <li>about</li>
+  <!--几乎和Vue的router-link一样, routerLinkActive和Vue里路由激活也有相似的功能-->
+  <li routerLink="todo" routerLinkActive="active">todo</li>
+  <li routerLink="about" routerLinkActive="active">about</li>
 </ul>
