--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -11,13 +11,13 @@
     </tr>
   </thead>
   <tbody>
-    <tr (click)="navigateTo(item)" *ngFor="let item of todos even as isEven" [ngClass]="{even: isEven}">
+    <tr (click)="navigateTo(item,$event)" *ngFor="let item of todos even as isEven" [ngClass]="{even: isEven}">
       <td>
         <input type="checkbox" [(ngModel)]="item.selected" (ngModelChange)="check()">
       </td>
       <td>{{item.description}}</td>
       <td>{{item.category}}</td>
-      <td><a (click)="delete(item.id)">delete</a></td>
+      <td><a (click)="delete.next(item.id)">delete</a></td>
     </tr>
   </tbody>
 </table>
