--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,2 +1,2 @@
 <app-create-todo></app-create-todo>
-<app-todo-list></app-todo-list>
+<app-todo-list [todos]="todoList" (delete)="delete($event)"></app-todo-list>
