--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,4 +1,4 @@
-<button (click)="deleteSelected()">删除选中的</button>
+<app-btn [text]="'删除选中的'" (click$)="deleteSelected()"></app-btn>
 <table>
   <thead>
     <tr>
