--- a/src/app/layout/btn/btn.component.html
+++ b/src/app/layout/btn/btn.component.html
@@ -1,1 +1,1 @@
-<button (click)="click$.next($event)">{{text}}</button>
+<button [disabled]="disabled" (click)="click$.next($event)">{{text}}</button>
