--- a/src/app/create-todo/create-todo.component.html
+++ b/src/app/create-todo/create-todo.component.html
@@ -1,3 +1,16 @@
+<button (click)="fetchPeople()">fetch people</button>
+<hr />
+<!-- <ul>
+  <li *ngFor="let item of people$ | async">{{item.name}}</li>
+</ul>
+<hr /> -->
+<p>{{people$ | json}}</p>
+
+<!-- <input type="file" #target>
+<button (click)="uploadFile(target)">upload</button>
+
+<p *ngIf="message">{{message}}</p> -->
+
 <form [formGroup]="form">
   <div class="form-control">
     <label>Description</label>
