feat: 🎸 按照官网完成NgRx写法

--- a/src/app/create-todo/create-todo.component.html
+++ b/src/app/create-todo/create-todo.component.html
@@ -43,3 +43,7 @@
   <app-btn [disabled]="form.invalid"   [text]="'提交'" (click$)="submit()" ></app-btn>
 
 </form>
+
+
+<hr />
+<app-my-counter></app-my-counter>
